<resources>
    <string name="app_name">WattsUp</string>
    <string name="charger_mode">Charger mode</string>
    <string name="registerLabel">Register</string>
    <string name="Alreadyhaveaccountlabel">Already have an account?</string>
    <string name="log_in_label">Log in</string>
    <string name="first_name_label">First name</string>
    <string name="last_name_label">Last name</string>
    <string name="e_mail_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="card_label">Card (optional)</string>
    <string name="emailLabel">E-mail</string>
    <string name="passwordLabel">Password</string>
    <string name="LoginDontHaveAccountLabel">"Don\'t have an account?"</string>
    <string name="login">Login</string>
    <string name="history">Charging History</string>
    <string name="cards">My Cards</string>
    <string name="scan_card">Scan card</string>
    <string name="scanning_for_card">Scanning for card...</string>
    <string name="user_mode_route">userMode</string>
    <string name="charger_mode_route">chargerMode</string>
    <string name="my_cards_route">myCards</string>
    <string name="add_card_route">addCard</string>
    <string name="ev_simulator_route">EVsimulator</string>
    <string name="charging_history_route">chargingHistory</string>
    <string name="landing_route">landing</string>
    <string name="registration_route">registration</string>
    <string name="register_card_route">registerCard</string>
    <string name="login_route">login</string>
    <string name="scan_card_route">scanCard</string>
    <string name="log_out">Log Out</string>
</resources>