...
    }
}

@Composable
fun ModeSelection(onChargerModeClick: () -> Unit, onUserModeClick: () -> Unit) {
    CircleButton(
        mode = "User mode",
        iconId = R.drawable.icon_user_mode,
        onClick = onUserModeClick,
        color = null,
        modifier = Modifier.size(220.dp)
            .padding(16.dp),
    )
...
